# lightning-hydra-cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  mkdocs.yml  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: gen_ref_pages.py  index.md  sop_doc_template.md
{{ cookiecutter.repo_name }}/docs/usage/: installation.md
